--- a/index.html
+++ b/index.html
@@ -13,43 +13,53 @@
   
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
+  <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://unpkg.com/scrollreveal"></script>
   
 <head>
-<title>Script HTML buat Kamu</title>
+<title>Hello Cantik !</title>
 <meta name="description" content="HTML Feeldream Repl Co">
 </head>
 <body>
-	
+	 
    <div class="overlay">
-     <div class="loading-message">Hai kamu!<br>Tunggu dulu ya..</div>
+     <div class="loading-message">Holla Cantik ku!<br>Tunggu dulu ya..</div>
    </div>
 
-   <audio src="https://feeldreams.github.io/maukahkamu/seandainya.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="cantik.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <section class="first">
-       <div class="wp"><img id="imgsatu" src="https://feeldreams.github.io/maukahkamu/wpsatu.jpg"/></div>
-       <img id="first_stiker" class="stiker fade-in" src="https://feeldreams.github.io/bunga.gif"/>
-       <h1 class="title">Hei Kamuu!</h1>
+       <div class="wp"><img id="imgsatu" src="bg.png"/></div>
+       <img id="first_stiker" class="stiker fade-in" src="meli.jpg"/>
+       <h1 class="title">Hei Cantik Melisa Pryanka Thomas!</h1>
        <p class="flip">Aku boleh jujur engga nih? </p>
        <p class="slide-up"><i>Scroll terus ke bawah ya :)</i></p>
   </section>
   
   <section>
-      <div class="wp"><img id="imgdua" src="https://feeldreams.github.io/maukahkamu/wpdua.jpg"/></div>
-      <img class="stiker fade-in" src="https://feeldreams.github.io/pusn.gif"/>
+      <div class="wp"><img id="imgdua" src="bg.png"/></div>
+      <img class="stiker fade-in" src="meli.jpg"/>
       <h2 class="title"><i>Sebenernya..</i></h2>
-      <p class="slide-right">Aku suka sama <b class="lingkar">kamu</b> :(</p>
+      <p class="slide-right">Aku suka sama kamu <br>
+      dan Aku juga gak mau kehilangan <b class="lingkar">kamu</b> :(</p>
+      
   </section>
   
   <section>
-  	<div class="wp"><img id="imgtiga" src="https://feeldreams.github.io/maukahkamu/wptiga.jpg"/></div>
-      <p id="teksnimasi">Kalo kamu tanya kenapa aku suka sama kamu, itu karena aku punya rasa nyaman tersendiri yang ga akan aku temui di mana pun.<br><br><b><i>Kamu Tau?</i></b><br>Gaada yang bisa bikin aku nyaman selain kamu..<br><br>Dan karena mengenalimu, aku merasakan apa itu kenyamanan, apa itu kebahagiaan, dan kamu sekaligus rumah bagiku :)</p>
+  	<div class="wp"><img id="imgtiga" src="bg.png"/></div>
+      <p id="teksnimasi">
+        Kalo kamu tanya kenapa aku suka sama kamu, itu karena aku punya rasa nyaman tersendiri yang ga akan aku temui di mana pun.
+        <br><br><b><i>Kamu Tau?</i></b><br>Gaada yang bisa bikin aku nyaman selain kamu..
+        <br><br>Dan karena mengenalimu, aku merasakan apa itu kenyamanan, apa itu kebahagiaan :)
+        <br><br>Setelah pertemuan kemarin ku yakin udah kamu gk bakal sama lagi seperti dulu ,
+        Tapi Ku berterima kasih ama mu puh selama ini udah ngisi kekosongan hidup ku.
+       <br><br><b><i> Maaf ya belum bisa jadi yang terbaik buat kamu puuh :)</i></b> 
+      </p>
   </section>
   
   <section>
-  	<div class="wp"><img id="imgempat" src="https://feeldreams.github.io/maukahkamu/wpempat.jpg"/></div>
+  	<div class="wp"><img id="imgempat" src="bg.png"/></div>
       <img class="stiker fade-in" src="https://feeldreams.github.io/bunga.gif"/>
       <h2 class="title"><i>Intinya,</i></h2>
       <p class="slide-right"><b>Kamu Mau Gak<br>Jadi Pacar Aku? </b></p>
@@ -60,7 +70,7 @@
   </section>
   
   <section id="iniakhir">
-  	<div class="wp" id="wpakhir"><img src="https://feeldreams.github.io/maukahkamu/wplima.jpg"/></div>
+  	<div class="wp" id="wpakhir"><img src="bg.png"/></div>
       <img id="stikerakhir" class="stiker fade-in" src="https://feeldreams.github.io/g5.gif"/>
       <img id="stikerakhir2" style="display:none" src="https://feeldreams.github.io/emawh.gif"/>
       <h1 id="judulakhir"></h1>
@@ -81,7 +91,7 @@
 function fungsimau(){
        fungsi=0;tes();
        teksjudulakhir = "Yeayyy! ";
-       tekskalimatakhir = "Makasii udah mau nerima<br>aku jadi pacar kamu, hihi ";
+       tekskalimatakhir = "Makasii udah mau nerima<br>aku jadi pacar kamu. ";
 }
 function fungsigamau(){
        fungsi=0;tes();
